crates/voom-cli/tests/snapshots/plan_envelope__validation_error.snap
---
source: crates/voom-cli/tests/plan_envelope.rs
expression: json
---
{
  "schema_version": "0",
  "command": "plan",
  "status": "error",
  "data": null,
  "warnings": [],
  "error": {
    "code": "POLICY_VALIDATION_ERROR",
    "message": "policy validation error: policy validation failed"
  }
}
